    clients ('floatplacement=smart' for little overlap,
    'floatplacement=center' for centering) or leaves the floating position as
    is ('floatplacement=none')
  * New rule condition 'pgid'
  * The 'new_attr' command now also accepts an initial value
  * React to a change of the 'floating_focused' attribute of the tag object
  * Bug fixes:
    - Fix wrong behaviour in 'cycle_layout' in the case where the current layout
      is not contained in the layout list passed to 'cycle_layout'.
    - Fix handling of delta -1 in 'focus_monitor' and 'cycle_monitor'
    - Fixed precision decimals in the layout tree (more reliable in- and output
      of fractions in frame splits)


Release 0.8.3 on 2020-06-06
---------------------------

  * Bug fixes:
    - Fix race condition in focus_follows_mouse handling

Release 0.8.2 on 2020-05-04
---------------------------

  * Selection of empty frames by the mouse (by click or by hover if
    focus_follows_mouse is enabled)
  * The commands 'close_and_remove' / 'close_or_remove' act like 'close' for
    floating clients
  * The decoration window allows focusing, moving, and resizing the client
    via the mouse (as known from standard floating window managers)
  * Improved herbstclient tab completion for the fish shell
  * Bug fixes:
    - Fix a crash in the error handler when a invalid monitor name is
      passed. (Affects list_padding move_monitor rename_monitor lock_tag
      unlock_tag)
    - Fix the type of WM_STATE
    - The client attributes sizehints_tiling and sizehints_floating are now
      writable
    - Fix EWMH urgency change for clients without WM hints set
    - Fix the exit code of the 'focus' command

Release 0.8.1 on 2020-04-21
---------------------------

  * the frame index 'e' refers to the first empty frame (e.g. 'rule index=e' places
    new windows in empty frames, if possible)
  * new setting 'hide_covered_windows' to improve the appearance when used with
    a compositor.